Correção de bugs

--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
-	<classpathentry kind="lib" path="lib/windows/swt.jar"/>
+	<classpathentry kind="lib" path="lib/linux/swt.jar"/>
 	<classpathentry kind="lib" path="lib/swt.custom.widgets.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
