--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="lib" path="lib/linux/swt.jar"/>
-	<classpathentry kind="lib" path="lib/swt.custom.widgets.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/swt.custom.widgets"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
